<resources>
    <string name="app_name">Philly Tour</string>
    <string name="welcome">Welcome to Philly!</string>
    <string name="eat">Eat</string>
    <string name="play">Play</string>
    <string name="see">See</string>
    <string name="stay">Stay</string>
    <string name="dk">Double Knot</string>
    <string name="roba">Robatayaki</string>
    <string name="la">Laurel</string>
    <string name="fg">Foie Gras</string>
    <string name="hlm">Helm</string>
    <string name="am">A Mano</string>
    <string name="ap">Antipasti Plate</string>
    <string name="zp">Zeppoli</string>
    <string name="fish">Sicilian Fisherman Stew</string>
    <string name="esp">Eastern State Penitentiary</string>
    <string name="gth">Ghost tours and hauntings</string>
    <string name="tuch">Please Touch Museum</string>
    <string name="fff">Family-friendly fun</string>
    <string name="rtm">Reading Terminal Market</string>
    <string name="exot">Huge selection of exotic and local foods</string>
    <string name="cbp">Citizen\'s Bank Park</string>
    <string name="phil">Home of the Phillies</string>
    <string name="srt">Schuylkill River Trail</string>
    <string name="srtm">140 miles of nature and city along the Schuylkill River</string>
    <string name="dog">Snoop Dogg</string>
    <string name="hhr">Hip Hop/Rap</string>
    <string name="pdc">Philadanco</string>
    <string name="fus">Fusion Dance</string>
    <string name="gcj">Gary Clark, Jr.</string>
    <string name="br">Blues/Rock</string>
    <string name="clk">Shakespeare in Clark Park</string>
    <string name="the">Free Theatre</string>
    <string name="div">The Divine Sister</string>
    <string name="mus">Musicals</string>
    <string name="hy">Hyatt at the Bellevue</string>
    <string name="lux">Luxury Hotel on Broad Street</string>
    <string name="mer">Le Meridien Philadelphia</string>
    <string name="mod">Modern Hotel with artistic accents</string>
    <string name="chh">Chestnut Hill Hotel</string>
    <string name="charm">Charming hotel with modern touches</string>
    <string name="rit">The Rittenhouse Hotel</string>
    <string name="ico">Iconic hotel with luxurious amenities</string>
    <string name="pen">Penn\'s View Hotel</string>
    <string name="ant">Antique hotel in historic area</string>
    <string name="siteKnot">http://www.doubleknotphilly.com/</string>

</resources>
