<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.phillytour.TourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            style="@style/menuStyle"
            android:gravity="center"
            android:background="@android:color/holo_red_light"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/eat"
            style="@style/catStyle"
            android:background="@color/eat"
            android:text="@string/eat" />

        <TextView
            android:id="@+id/play"
            style="@style/catStyle"
            android:background="@color/play"
            android:text="@string/play" />

        <TextView
            android:id="@+id/see"
            style="@style/catStyle"
            android:background="@color/see"
            android:text="@string/see" />

        <TextView
            android:id="@+id/stay"
            style="@style/catStyle"
            android:background="@color/stay"
            android:text="@string/stay" />

    </LinearLayout>
</RelativeLayout>
